Clean up repository: remove cache files, artifacts, and database files. Add git push scripts.

--- a/.gitignore
+++ b/.gitignore
@@ -63,6 +63,10 @@ artifacts/
 *.docx
 *.pdf
 
+# Cache files (should be ignored but were previously tracked)
+__pycache__/
+*.pyc
+
 # OS
 .DS_Store
 Thumbs.db
